2018-05-14  Charlie Zender  <zender@uci.edu>

	* Ensure VLEN mss_val returned as scalar value of type bs_typ in nco_mss_val_get()

2018-05-09  Charlie Zender  <zender@uci.edu>

	* Fix C++ compiling error by avoiding calls to cast_nctype_void() and nco_val_cnf_typ() with user-defined argument types

	* NCO 4.7.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.5-alpha04: Carne Asada Tacos';git push
	git tag -a 4.7.5-alpha04 -m 'vlen var; enum att, var; RAM diags; ncap2 pck';git push --tags

	* Revert immediate return from nco_val_cnf_typ() if typ_in == typ_out to fix regressions

	* Adjust memory diagnostics for VLEN printing

2018-05-09  Henry Butowsky <henryb@hush.com>

	* Add optional scale_factor/add_offset arguments to ncap2 packing routines

2018-05-07  Charlie Zender  <zender@uci.edu>

	* CDL enum printing works for all types

2018-05-06  Charlie Zender  <zender@uci.edu>

	* CDL vlen variable printing works except for base type char and string

	* Add first-draft VLEN printing to nco_prn_var_val_trv()

	* Allow user-defined types in nco_prn_var_val_trv()

	* Return from nco_val_cnf_typ() if typ_in == typ_out

	* Support user-defined types and class types in nco_get_var*() functions

2018-05-05  Charlie Zender  <zender@uci.edu>

	* Complete VLEN attribute CDL printing support for all base-types except NC_CHAR and NC_STRING

2018-05-04  Charlie Zender  <zender@uci.edu>

	* Re-order vlen attribute loop to distill common operations

	* NCO 4.7.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.5-alpha03: Tortilla Republic';git push
	git tag -a 4.7.5-alpha03 -m 'vlen att; abort();	yyyy-mm-01-00000; CDL types';git push --tags

	* Add CDL types: section

	* Add nco_inq_typeids(), add typ_nbr to traversal table

	* Add braces and support NC_VLEN attribute printing for base-types int, short, uint64, float

2018-05-03  Charlie Zender  <zender@uci.edu>

	* Print correct type names for non-atomic attributes
