@@ -119,8 +119,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.7.5-alpha04
-@set doc-edition 4.7.5-alpha04
+@set nco-edition 4.7.5-alpha05
+@set doc-edition 4.7.5-alpha05
 @set copyright-years 1995--2018
 @set update-year 2018
 @set update-date 22 May 2018
